# crossref_batch

./: README.md  pyproject.toml  setup.py
data/: quail.yml  quail_journal.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/contents/: 1_about.rst  2_digital_commons.rst  3_conference_proceedings.rst  4_journal_articles.rst  5_utk_crossref_dois.rst  6_updating_trace_with_dois.rst
utilities/: copy_metadata_only.py  crawl_papers.py  lxml_transform.py  test.xslt  update_trace.py
